# gwerks

./: .gitattributes  LICENSE  pyproject.toml
src/gwc/: aws.py  builds.py
src/gwerks/: __init__.py  _version.py  aws.py  builds.py  cli.py  commands.py  decorators.py  docker.py  messaging.py  shortuuid.py  util.py  version.txt
src/gwerks/packaging/: __init__.py  github.py
src/gwerks/util/: __init__.py  sys.py
